--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -1,4 +1,23 @@
 /* applies to anything of class "example-class-selector" */
+/*
+.project {
+     margin-left: 20 px;
+     background-color: #deebf7;
+     padding: 20px;
+     width: 525px;
+}*/
+
+#project1 {
+    font-variant: small-caps;
+}
+
+p {
+    font-variant: small-caps;
+}
+
+.project p {
+    font-variant: small-caps;
+}
 .example-class-selector {
 	margin-top: 2em;
 }
